# SegmentationCMakeVersion

./: CMakeLists.txt  README.md  Segmentcl.cpp  Segmentcl.h  Segmentcl.qrc  Segmentcl.ui  main.cpp
